# claude-code

./: .gitignore  CLAUDE.md  MASTER_ORCHESTRATOR_COMPLETE.md  OPTIMIZATION_PLAN.md  chatgpt_digest_report.md  master_project_analyzer.py
master_orchestrator/: .env  .pre-commit-config.yaml  Dockerfile  README.md  README_DEPLOYMENT.md  README_SCANNER.md  agent_mapping_analyzer.py  agui_frontend_orchestrator.py  agui_nextjs_frontend.py  ai_repositories_analysis_report.md  autonomous_code_generator.py  comprehensive_testing.py  computer_control_orchestrator.py  config.example.yaml  config_template.yaml  content_analyzer_deployer.py  continuous_deployment.py  continuous_repo_scanner.py  conversation_project_initiator.py  decision_integration_agent.py  deployment_report.txt  deployment_testing_strategy.py  dev_capabilities.py  digital_twin_orchestrator.py  distributed_inference_orchestrator.py  docker-compose.yml  dspy_integration.py  enhanced_live_server.py  enterprise_agent_ecosystem.py  fixed_start.py  frontend_orchestrator.py  github_discovery_orchestrator.py  github_integration.py  hardware_discovery.py  hardware_setup.sh  holistic_system_orchestrator.py  infrastructure_orchestrator.py  install.sh  integrated_master_orchestrator.py  knowledge_orchestrator.py  (+38 more)
master_orchestrator/.github/workflows/: ci.yml
master_orchestrator/dags/: repository_analysis_dag.py
master_orchestrator/data/arangodb/: SERVER
master_orchestrator/data/arangodb/engine-rocksdb/: 000078.sst  000079.sst  000080.sst  000081.sst  IDENTITY  MANIFEST-000053  OPTIONS-000075  (+1 more)
master_orchestrator/foundation_data/: learning.db
master_orchestrator/foundation_data/active_agents/: youtube_agent_@TwoMinutePapers_20250528_191743.json  youtube_agent_@code4AI_20250528_191713.json
master_orchestrator/foundation_data/monitoring/: dashboard_data_20250528_191743.json
master_orchestrator/foundation_data/youtube_analysis/: youtube_analysis_@TwoMinutePapers_2025-05-28T19-17-43.531637.json  youtube_analysis_@code4AI_2025-05-28T19-17-13.755541.json
master_orchestrator/master_orchestrator/: __init__.py  agents.py  api.py  cli.py  config.py  core.py  infrastructure.py  knowledge_graph.py  llm_integration.py  repository_manager.py
master_orchestrator/mcp_servers/documentation/: server.py
master_orchestrator/mcp_servers/github/: server.py
master_orchestrator/mcp_servers/web_search/: server.py
master_orchestrator/mcp_servers/youtube/: server.py
master_orchestrator/monitoring/: grafana_dashboard.json  prometheus.yml
master_orchestrator/tests/: test_basic.py
master_orchestrator/youtube_analysis_results/: channel_analysis_@TwoMinutePapers_20250528_190455.json  channel_analysis_@code4AI_20250528_190342.json
self_gen_orchestrator/: .gitignore  README.md  pyproject.toml  questions.json  test_cli.py
self_gen_orchestrator/frontend/public/: projects.json
self_gen_orchestrator/frontend/src/: config.ts
self_gen_orchestrator/src/self_gen_orchestrator/: __init__.py  cli.py
(+2 files in other folders)
