[project]
name = "master-orchestrator"
version = "0.1.0"
description = "Agentic multi-project orchestration system"
authors = [
    {name = "Master Orchestrator", email = "orchestrator@localhost"}
]
dependencies = [
    # Core Framework
    "pydantic>=2.0.0",
    "dspy-ai>=2.4.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    
    # Database & Knowledge Graph
    "arango>=0.2.0",
    "neo4j>=5.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    
    # AI & ML
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    "google-generativeai>=0.3.0",
    "transformers>=4.35.0",
    "torch>=2.1.0",
    "ray[default]>=2.8.0",
    
    # Orchestration
    "apache-airflow>=2.7.0",
    "kubernetes>=28.0.0",
    "docker>=6.1.0",
    "ansible>=8.0.0",
    
    # Data Processing
    "polars>=0.19.0",
    "pyarrow>=14.0.0",
    "duckdb>=0.9.0",
    
    # Networking & Communication
    "httpx>=0.25.0",
    "websockets>=12.0",
    "grpcio>=1.59.0",
    
    # Monitoring & Observability
    "prometheus-client>=0.19.0",
    "grafana-api>=1.0.3",
    "structlog>=23.2.0",
    
    # Utilities
    "typer>=0.9.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.9.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "pre-commit>=3.5.0",
]

[project.scripts]
master-orchestrator = "master_orchestrator.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]